Add scaling, refactor, update Dotty demo